overlapping issue solved :)

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     color: #fff;
     position: sticky;
     top: 0;
-    /* z-index: 100; */
+    z-index: 100;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     height: 100%;
 }
